// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GenerateStateCpp can generate fixture ARRAY_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/ARRAY_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture ARRAY_PROPS_WITH_NESTED_OBJECT 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/ARRAY_PROPS_WITH_NESTED_OBJECT/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture BOOLEAN_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/BOOLEAN_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COLOR_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COLOR_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMMANDS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMMANDS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMMANDS_AND_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMMANDS_AND_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture COMPONENT_WITH_ALL_STATE_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/COMPONENT_WITH_ALL_STATE_PROPS/States.h>

namespace facebook {
namespace react {

bool SimpleComponent::getDisabled() const {
      return disabled_;
    }

    
    std::string SimpleComponent::getAccessibilityHint() const {
      return accessibilityHint_;
    }

    
    std::string SimpleComponent::getAccessibilityRole() const {
      return accessibilityRole_;
    }

    
    int SimpleComponent::getProgress1() const {
      return progress1_;
    }

    
    int SimpleComponent::getProgress2() const {
      return progress2_;
    }

    
    int SimpleComponent::getProgress3() const {
      return progress3_;
    }

    
    Float SimpleComponent::getBlurRadius() const {
      return blurRadius_;
    }

    
    Float SimpleComponent::getBlurRadius2() const {
      return blurRadius2_;
    }

    
    Float SimpleComponent::getBlurRadius3() const {
      return blurRadius3_;
    }

    
    Float SimpleComponent::getBlurRadius4() const {
      return blurRadius4_;
    }

    
    Float SimpleComponent::getBlurRadius5() const {
      return blurRadius5_;
    }

    
    Float SimpleComponent::getBlurRadius6() const {
      return blurRadius6_;
    }

    
    double SimpleComponent::getD_blurRadius() const {
      return d_blurRadius_;
    }

    
    double SimpleComponent::getD_blurRadius2() const {
      return d_blurRadius2_;
    }

    
    double SimpleComponent::getD_blurRadius3() const {
      return d_blurRadius3_;
    }

    
    double SimpleComponent::getD_blurRadius4() const {
      return d_blurRadius4_;
    }

    
    double SimpleComponent::getD_blurRadius5() const {
      return d_blurRadius5_;
    }

    
    double SimpleComponent::getD_blurRadius6() const {
      return d_blurRadius6_;
    }

    
    SharedColor SimpleComponent::getTintColor() const {
      return tintColor_;
    }

    
    ImageSource SimpleComponent::getThumbImage() const {
      return thumbImage_;
    }

    
    Point SimpleComponent::getStartPoint() const {
      return startPoint_;
    }

    
    EdgeInsets SimpleComponent::getContentInset() const {
      return contentInset_;
    }

    
    std::vector<SimpleComponentNativePrimitivesStruct> SimpleComponent::getNativePrimitives() const {
      return nativePrimitives_;
    }

    
    SimpleComponentObjectPropStruct SimpleComponent::getObjectProp() const {
      return objectProp_;
    }

    
    SimpleComponentAlignment SimpleComponent::getAlignment() const {
      return alignment_;
    }

    
    SimpleComponentMaxInterval SimpleComponent::getMaxInterval() const {
      return maxInterval_;
    }

} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture DOUBLE_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/DOUBLE_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EVENT_NESTED_OBJECT_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EVENT_NESTED_OBJECT_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EVENT_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EVENT_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EVENTS_WITH_PAPER_NAME 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EVENTS_WITH_PAPER_NAME/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EXCLUDE_ANDROID 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EXCLUDE_ANDROID/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EXCLUDE_ANDROID_IOS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EXCLUDE_ANDROID_IOS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/EXCLUDE_IOS_TWO_COMPONENTS_DIFFERENT_FILES/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture FLOAT_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/FLOAT_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture IMAGE_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/IMAGE_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture INSETS_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/INSETS_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture INT32_ENUM_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/INT32_ENUM_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture INTEGER_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/INTEGER_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture INTERFACE_ONLY 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/INTERFACE_ONLY/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture MULTI_NATIVE_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/MULTI_NATIVE_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture NO_PROPS_NO_EVENTS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/NO_PROPS_NO_EVENTS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture OBJECT_PROPS 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/OBJECT_PROPS/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture POINT_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/POINT_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture STRING_ENUM_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/STRING_ENUM_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture STRING_PROP 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/STRING_PROP/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture TWO_COMPONENTS_DIFFERENT_FILES 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/TWO_COMPONENTS_DIFFERENT_FILES/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;

exports[`GenerateStateCpp can generate fixture TWO_COMPONENTS_SAME_FILE 1`] = `
Map {
  "States.cpp" => "
/**
 * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
 *
 * Do not edit this file as changes may cause incorrect behavior and will be lost
 * once the code is regenerated.
 *
 * @generated by codegen project: GenerateStateCpp.js
 */
#include <react/renderer/components/TWO_COMPONENTS_SAME_FILE/States.h>

namespace facebook {
namespace react {



} // namespace react
} // namespace facebook
",
}
`;
